# Funcy

./: README.md
Funcy/: .cproject  .gitignore  .project  CMakeLists.txt  TODO  addLicenseHeader.sh  build.sh
Funcy/funcy/: concat.h  filter.h  generator_seq.h  iterator_seq.h  map.h  memory.h  parallel.h  range_seq.h  seq_def.h  sequence.h
Funcy/funcy/impl/: sequence_crtp.h
Funcy/funcy/util/: metaprog.h  ring_buffer.h
Funcy/tst/: .gitignore  AbstractVectorIntBasedTest.h  AccumulationTest.cpp  CMakeLists.txt  CommonSequenceOperationsTest.cpp  ConcatenatedSeqTest.cpp  FilterTest.cpp  FuncyTestMain.cpp  GeneratorSeqTest.cpp  IteratorSeqTest.cpp  MapTest.cpp  MemoryTest.cpp  MultipleOperationsTest.cpp  ParallelTest.cpp  PerfFuncyVsStlTest.cpp  RangeSeqTest.cpp  SeqDefTest.cpp  SeqTestHelper.h  SequenceWriteToTest.cpp  UntypedSequenceTest.cpp
Funcy/tst/euler/: .gitignore  CMakeLists.txt  Problem21AmicableNumbers.cpp  Problem6SumSquareDifference.cpp
Funcy/tst/util/: RingBufferTest.cpp
